# TopologyTracer

./: CMakeLists.txt  README.md
example/: NrGrains&EnergyStatistics.txt  TopologyTracer2D3D_Parameter.xml
src/: topologytracer_defs.h  topologytracer_kernel.h
